--- a/src/app/components/copy_exam/css/styles.module.css
+++ b/src/app/components/copy_exam/css/styles.module.css
@@ -98,8 +98,8 @@
   margin-left: 0;
   overflow-y: auto;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: flex-start;
+  align-items: flex-start;
   min-height: 100vh;
 }
 
